--- a/Site/public/css/index.css
+++ b/Site/public/css/index.css
@@ -1,48 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,300&display=swap');
-
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins',sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
+
 body {
     background-image: url(../assets/imgs/fundo.png);
     background-size: cover;
-    
-    
     min-height: 100vh;
-
-
-    
-
 }
-.logo{
+
+.logo {
     align-items: center;
     justify-content: space-between;
 }
 
-
-
-.scrolled{
+.scrolled {
     height: 1500px;
-    background:#1F1D36;
+    background: #1F1D36;
     transition: 0.3s ease-in-out;
     width: 100%;
-
 }
 
-.header-content{
+.header-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100vw;
     height: 100%;
     padding: 0 5%;
-
 }
 
-.header{
+.header {
     width: 100vw;
     height: 15vh;
     color: #fff;
@@ -51,54 +42,43 @@ body {
     top: 0;
     background-image: url(../assets/imgs/fundo.png);
 }
-.container {
 
+.container {
     display: flex;
     justify-content: center;
     align-items: center;
-    
     width: 100%;
     height: 20vh;
-
     background-image: url(../assets/imgs/OndaRoxa.png);
     background-size: cover;
-
-    
 }
 
-.logoEmpresa { 
+.logoEmpresa {
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 20px;
-
-    
 }
+
 .logoNavbar {
     width: 100%;
-
-   
-
 }
-.logoNavbar img{
+
+.logoNavbar img {
     width: 100%;
     height: 100%;
 }
 
- .nomeEmpresa {
+.nomeEmpresa {
     width: 60%;
     height: 50%;
- 
 }
 
-.nomeEmpresa div{
+.nomeEmpresa div {
     width: 100%;
     height: 100%;
-
     color: whitesmoke;
     font-size: min(25px);
-
-
 }
 
 .navbar {
@@ -106,26 +86,26 @@ body {
     flex-direction: row;
     justify-content: end;
     align-items: center;
-
     list-style: none;
-
     width: 100%;
     margin: 0px 30px 0px;
-
-
 }
+
 .navbar li {
     color: whitesmoke;
     margin: 10px;
 }
-.navbar li a{
+
+.navbar li a {
     color: whitesmoke;
     text-decoration: none;
-    font-size:min(12px);
+    font-size: min(12px);
 }
 
+
 /* conteudo */
-.content{
+
+.content {
     background-size: cover;
     height: 100vh;
     width: 100%;
@@ -137,32 +117,32 @@ body {
 }
 
 
-
 /* testes */
 
-.navbar a{
+.navbar a {
     position: relative;
     display: block;
-    padding:  10px 15px;
+    padding: 10px 15px;
     border: 2px solid #fff;
     border-radius: 0 20px 0 20px;
     letter-spacing: 2px;
     color: #4f29cd;
     overflow: hidden;
-    background-color: rgba(255,255,255,0.13);
+    background-color: rgba(255, 255, 255, 0.13);
     font-weight: bolder;
 }
 
-a span{
+a span {
     position: relative;
     z-index: 1;
     transition: 1s;
-} 
-a:hover span{
-    color: #fff;
-    
 }
-a .wave{
+
+a:hover span {
+    color: #fff;
+}
+
+a .wave {
     position: absolute;
     top: calc(100% + 22px);
     left: 0;
@@ -172,9 +152,11 @@ a .wave{
     transition: 1s;
     text-decoration: none;
 }
-a:hover .wave{
+
+a:hover .wave {
     top: 0;
 }
+
 a .wave::before {
     content: "";
     position: absolute;
@@ -186,60 +168,48 @@ a .wave::before {
     animation: animate 0.5s linear infinite;
 }
 
-@keyframes animate{
-    0%{
-        background-position-x:0 ;
+@keyframes animate {
+    0% {
+        background-position-x: 0;
     }
-    100%{
-        background-position-x:118px ;
+    100% {
+        background-position-x: 118px;
     }
 }
 
-
-.cadastrar { 
-
+.cadastrar {
     text-align: center;
-
     width: 8vw;
     padding: 2px;
-
     background-color: blueviolet;
     border-radius: 5px;
-
-    
-    
 }
+
 .cadastrar a {
     color: whitesmoke;
     text-decoration: none;
-
     font-size: 3vh;
 }
 
-.telaInicial{
+.telaInicial {
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100vh;
-
 }
 
-.ondaAzulTelaInicial{
+.ondaAzulTelaInicial {
     width: 100%;
     height: 20vh;
-
-
-   background-image: url(../assets/imgs/ondaAzulParaCima.png);
-   background-size: cover;
+    background-image: url(../assets/imgs/ondaAzulParaCima.png);
+    background-size: cover;
 }
 
 .telaInicial .textoEBarquinho {
     display: flex;
     flex-direction: row;
     align-items: center;
-
     height: 65%;
-
 }
 
 .telaInicial .textoTelaInicial {
@@ -247,259 +217,221 @@ a .wave::before {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
     text-align: center;
-
-
     height: 100%;
-
-   
 }
 
- .TituloTelaInicial {
+.TituloTelaInicial {
     color: whitesmoke;
     font-size: min(2.3vw);
 }
- .texto{
+
+.texto {
     width: 70%;
-
     text-align: center;
-
     color: whitesmoke;
     font-size: min(2.1vw);
-
 }
 
 .barquinhoTelaInicial img {
     position: relative;
     top: 10vh;
     right: 7vw;
-
     width: 25vw;
     height: 50vh;
-
-
 }
-.ondaAzulParaBaixo{
+
+.ondaAzulParaBaixo {
     background-image: url(../assets/imgs/ondaAzulParaBaixo.png);
     background-size: cover;
     width: 100%;
     height: 20vh;
 }
-.caracteristicasEmpresa{
+
+.caracteristicasEmpresa {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-
-
 }
-.caracteristicas{
+
+.caracteristicas {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-
-    
     height: 100vh;
-
 }
+
 .missao {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
     text-align: center;
-
     width: 40%;
     height: 100vh;
-
 }
 
-
-.missao img{
+.missao img {
     width: 50%;
+}
 
-}
-.tituloMissao{
+.tituloMissao {
     color: whitesmoke;
-    font-size: max(25px,15px);
+    font-size: max(25px, 15px);
 }
+
 .textoMissao {
     color: whitesmoke;
-    font-size: min(20px,12px);
+    font-size: min(20px, 12px);
 }
 
-
-
-.visao{
+.visao {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
     text-align: center;
-
     width: 40%;
     height: 100%;
-
 }
-.visao img{
+
+.visao img {
     width: 50%;
+}
 
-}
-.tituloVisao{
+.tituloVisao {
     color: whitesmoke;
-    font-size: max(25px,15px);
+    font-size: max(25px, 15px);
 }
+
 .textoVisao {
     color: whitesmoke;
-    font-size: min(20px,12px);
+    font-size: min(20px, 12px);
 }
 
-
-.valores{
+.valores {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
     text-align: center;
-
     width: 40%;
     height: 100%;
-
 }
-.valores img{
+
+.valores img {
     width: 50%;
+}
 
-}
-.tituloValores{
+.tituloValores {
     color: whitesmoke;
-    font-size:max(25px,15px);
+    font-size: max(25px, 15px);
 }
+
 .textoValores {
     color: whitesmoke;
-    font-size: min(20px,12px);
+    font-size: min(20px, 12px);
 }
-
 
 .ondaRoxaValores {
     width: 100%;
     height: 20vh;
-
     background-image: url(../assets/imgs/ondaRoxaParaCima\ 2.png);
     background-size: cover;
-
-    
 }
 
-.ondaRoxaValoresBaixo{
-
+.ondaRoxaValoresBaixo {
     width: 100%;
     height: 20vh;
-
     background-image: url(../assets/imgs/ondaRoxaParaBaixo\ 2.png);
     background-size: cover;
-
 }
+
 
 /* Footer */
 
-.footer{
+.footer {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-  
 }
 
-.alinharCards{
+.alinharCards {
     display: flex;
     flex-direction: row;
     justify-content: center;
-
 }
 
-
-.ondaRoxaFooterCima{
+.ondaRoxaFooterCima {
     width: 100%;
     height: 20vh;
-
     background-image: url(../assets/imgs/ondaRoxaParaCima\ 2.png);
     background-size: cover;
-
-    
 }
-.ondaRoxaFooterBaixo{
+
+.ondaRoxaFooterBaixo {
     width: 100%;
     height: 20vh;
-
     background-image: url(../assets/imgs/ondaRoxaParaBaixo\ 2.png);
     background-size: cover;
-
-
 }
 
-.containerCards{
+.containerCards {
     display: flex;
     justify-content: center;
     max-width: 100%;
     flex-wrap: wrap;
 }
 
-.containerCards .card{
+.containerCards .card {
     display: flex;
     width: 25vw;
     margin: 30px;
 }
-.containerCards .card .box img{
+
+.containerCards .card .box img {
     width: 100%;
 }
-.containerCards .card .box{
+
+.containerCards .card .box {
     background: #ebf5fc;
     border-radius: 15px;
     transition: 0.5s;
     padding: 5%;
 }
 
-.containerCards .card:hover .box{
+.containerCards .card:hover .box {
     transform: translateY(-50px);
     box-shadow: 0 10 40px rgba(0, 0, 0, 0.2);
-    background: linear-gradient(#4f29cd,#1F1D36);
+    background: linear-gradient(#4f29cd, #1F1D36);
 }
 
-
-
-.containerCards .card .box .conteudo{
+.containerCards .card .box .conteudo {
     padding: 7%;
     text-align: center;
 }
 
-
-.containerCards .card .box .conteudo h3{
-
+.containerCards .card .box .conteudo h3 {
     /* Vai analisar entre o 10px e o 2vw, e ficar o o maior valor */
-    font-size:20px;
+    font-size: 20px;
     color: #000;
     display: flex;
     justify-content: center;
     transition: 0.5s;
-
 }
 
-.containerCards .card:hover .box .conteudo h3{
+.containerCards .card:hover .box .conteudo h3 {
     color: #fff;
 }
-.containerCards .card:hover .box .conteudo p{
+
+.containerCards .card:hover .box .conteudo p {
     color: #fff;
+}
 
-} 
-
-.containerCards .card .box .conteudo p{
-
+.containerCards .card .box .conteudo p {
     font-size: 15px;
     font-weight: 300;
     color: #000;
@@ -507,7 +439,7 @@ a .wave::before {
     transform: 0.5s;
 }
 
-.containerCards .card .box .conteudo a{
+.containerCards .card .box .conteudo a {
     position: relative;
     display: inline-block;
     padding: 4% 10%;
@@ -516,18 +448,18 @@ a .wave::before {
     color: #fff;
     margin-top: 20px;
     text-decoration: none;
-    font-size: min(15px, 3vw);    
+    font-size: min(15px, 3vw);
 }
 
-.containerCards .card:hover .box .conteudo a{
+.containerCards .card:hover .box .conteudo a {
     background: #4f29cd;
 }
 
-.block{
+.block {
     background-color: black;
 }
 
-.contato{
+.contato {
     margin-left: 5%;
 }
 
@@ -535,48 +467,48 @@ a .wave::before {
     width: min(2vw);
 }
 
-.imagensFooter h2{
+.imagensFooter h2 {
     color: #fff;
 }
 
-
-.contatoarea{
+.contatoarea {
     padding: 30px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
-.contatoinfo{
-    color:#fff;
+
+.contatoinfo {
+    color: #fff;
     max-width: 100%;
     line-height: 55px;
     font-size: min(45px, 1.2vw);
     padding-left: 13%;
     margin-left: 6%;
-
 }
+
 .contatoinfo i {
     margin-right: 20px;
     font-size: 20px;
 }
 
-iframe{
+iframe {
     min-width: (200px);
     height: (100px);
 }
 
-.contato-form{
+.contato-form {
     max-width: 50%;
     margin-left: -4%;
 }
 
-.contatoinfo, .contato-form{
+.contatoinfo,
+.contato-form {
     flex: 0.5;
 }
 
-.contato-form h2{
+.contato-form h2 {
     color: #fff;
     text-align: center;
     font-size: 25px;
@@ -584,13 +516,11 @@ iframe{
     padding-right: 100%;
 }
 
-
-.contato-form .texto:first-child{
+.contato-form .texto:first-child {
     margin-right: 15px;
 }
 
-.ondaAzulFooter{
- 
+.ondaAzulFooter {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -598,25 +528,12 @@ iframe{
     height: 10vh;
     background-image: url(../assets/imgs/ondaAzulParaCima.png);
     background-size: cover;
-
-    
 }
-
-
-
-
-
-
-
-
-
-
-
 
 
 /*CARROSEL*/
 
-.telaVeniti{
+.telaVeniti {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -630,147 +547,167 @@ iframe{
     max-width: 100%;
     /* text-align: center; */
     padding: 25% 0% 25% 0%;
- }
- #slider input[type=radio] {
+}
+
+#slider input[type=radio] {
     display: none;
- }
- #slider label {
-    cursor:pointer;
+}
+
+#slider label {
+    cursor: pointer;
     text-decoration: none;
- }
- #slides {
+}
+
+#slides {
     padding: 10px;
     border: 3px solid #ccc;
     background: #fff;
     position: relative;
     z-index: 1;
     height: 540px;
- }
- #overflow {
+}
+
+#overflow {
     width: 100%;
     overflow: hidden;
- }
- #slide1:checked ~ #slides .inner {
+}
+
+#slide1:checked~#slides .inner {
     margin-left: 0;
- }
- #slide2:checked ~ #slides .inner {
+}
+
+#slide2:checked~#slides .inner {
     margin-left: -100%;
- }
- #slide3:checked ~ #slides .inner {
+}
+
+#slide3:checked~#slides .inner {
     margin-left: -200%;
- }
- #slide4:checked ~ #slides .inner {
+}
+
+#slide4:checked~#slides .inner {
     margin-left: -300%;
- }
- #slides .inner {
+}
+
+#slides .inner {
     transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
     width: 400%;
     /* line-height: 0; */
     height: 510px;
- }
- #slides .slide {
+}
+
+#slides .slide {
     width: 25%;
-    float:left;
+    float: left;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
     color: #fff;
- }
- #slides .slide_1 {
+}
+
+#slides .slide_1 {
     background: #00171F;
- }
- #slides .slide_2 {
+}
+
+#slides .slide_2 {
     background: #003459;
- }
- #slides .slide_3 {
+}
+
+#slides .slide_3 {
     background: #007EA7;
- }
- #slides .slide_4 {
+}
+
+#slides .slide_4 {
     background: #00A8E8;
- }
- #controls {
+}
+
+#controls {
     margin: -180px 0 0 0;
     width: 100%;
     height: 50px;
     z-index: 3;
     position: relative;
- }
- #controls label {
+}
+
+#controls label {
     transition: opacity 0.2s ease-out;
     display: none;
     width: 50px;
     height: 50px;
     opacity: .4;
- }
- #controls label:hover {
+}
+
+#controls label:hover {
     opacity: 1;
- }
- #slide1:checked ~ #controls label:nth-child(2),
- #slide2:checked ~ #controls label:nth-child(3),
- #slide3:checked ~ #controls label:nth-child(4),
- #slide4:checked ~ #controls label:nth-child(1) {
+}
+
+#slide1:checked~#controls label:nth-child(2),
+#slide2:checked~#controls label:nth-child(3),
+#slide3:checked~#controls label:nth-child(4),
+#slide4:checked~#controls label:nth-child(1) {
     background: url(https://image.flaticon.com/icons/svg/130/130884.svg) no-repeat;
-    float:right;
+    float: right;
     margin: 0 -50px 0 0;
     display: block;
- }
- #slide1:checked ~ #controls label:nth-last-child(2),
- #slide2:checked ~ #controls label:nth-last-child(3),
- #slide3:checked ~ #controls label:nth-last-child(4),
- #slide4:checked ~ #controls label:nth-last-child(1) {
+}
+
+#slide1:checked~#controls label:nth-last-child(2),
+#slide2:checked~#controls label:nth-last-child(3),
+#slide3:checked~#controls label:nth-last-child(4),
+#slide4:checked~#controls label:nth-last-child(1) {
     background: url(https://image.flaticon.com/icons/svg/130/130882.svg) no-repeat;
-    float:left;
+    float: left;
     margin: 0 0 0 -50px;
     display: block;
- }
- #bullets {
+}
+
+#bullets {
     margin: 150px 0 0;
     text-align: center;
- }
- #bullets label {
+}
+
+#bullets label {
     display: inline-block;
     width: 10px;
     height: 10px;
-    border-radius:100%;
+    border-radius: 100%;
     background: #ccc;
     margin: 0 10px;
- }
- #slide1:checked ~ #bullets label:nth-child(1),
- #slide2:checked ~ #bullets label:nth-child(2),
- #slide3:checked ~ #bullets label:nth-child(3),
- #slide4:checked ~ #bullets label:nth-child(4) {
+}
+
+#slide1:checked~#bullets label:nth-child(1),
+#slide2:checked~#bullets label:nth-child(2),
+#slide3:checked~#bullets label:nth-child(3),
+#slide4:checked~#bullets label:nth-child(4) {
     background: #444;
- }
- @media screen and (max-width: 900px) {
-    #slide1:checked ~ #controls label:nth-child(2),
-    #slide2:checked ~ #controls label:nth-child(3),
-    #slide3:checked ~ #controls label:nth-child(4),
-    #slide4:checked ~ #controls label:nth-child(1),
-    #slide1:checked ~ #controls label:nth-last-child(2),
-    #slide2:checked ~ #controls label:nth-last-child(3),
-    #slide3:checked ~ #controls label:nth-last-child(4),
-    #slide4:checked ~ #controls label:nth-last-child(1) {
-       margin: 0;
+}
+
+@media screen and (max-width: 900px) {
+    #slide1:checked~#controls label:nth-child(2),
+    #slide2:checked~#controls label:nth-child(3),
+    #slide3:checked~#controls label:nth-child(4),
+    #slide4:checked~#controls label:nth-child(1),
+    #slide1:checked~#controls label:nth-last-child(2),
+    #slide2:checked~#controls label:nth-last-child(3),
+    #slide3:checked~#controls label:nth-last-child(4),
+    #slide4:checked~#controls label:nth-last-child(1) {
+        margin: 0;
     }
     #slides {
-       max-width: calc(100% - 140px);
-       margin: 0 auto;
+        max-width: calc(100% - 140px);
+        margin: 0 auto;
     }
- }
+}
 
- 
 .slide-content {
     display: flex;
 }
-
 
 .slide-content img {
     width: 574px;
     margin-right: 42px;
     border-radius: 61px;
 }
-
 
 .div_text {
     display: flex;
@@ -779,3 +716,19 @@ iframe{
     justify-content: space-evenly;
 }
 
+.slide-content {
+    display: flex;
+}
+
+.slide-content img {
+    width: 574px;
+    margin-right: 42px;
+    border-radius: 61px;
+}
+
+.div_text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
