--- a/Site/public/css/tela-cadastro.css
+++ b/Site/public/css/tela-cadastro.css
@@ -372,11 +372,11 @@ body {
 
 form{
     height: 75%;
-    width: 40%; 
+    width: 60%; 
     background-color: rgba(255,255,255,0.13);
     position: absolute;
     transform: translate(-50%,-50%);
-    top: 60%;
+    top: 54%;
     left: 50%;
     border-radius: 10px;
     backdrop-filter: blur(10px);
@@ -400,8 +400,8 @@ form *{
    display: flex;
   width: 100%;
   height: 80%;
-
 }
+
 .campos{
   flex-wrap: wrap;  
   /* display: flex;  */
@@ -438,7 +438,7 @@ input{
     color: #ffffff;
 }
 
-.btn_navegar{
+/* .btn_navegar{
     margin-top: 50px;
     width: 50%;
     height: 10%;
@@ -456,6 +456,46 @@ input{
 .btn_navegar:hover{
 
   background-color: #34aedf;
+
+} */
+
+
+.div_botao {
+  width: 90%;
+  height: 25%;
+  margin-top: 16px;
+}
+
+.efeito {
+  border: none;
+  color: #ffffff;
+  padding: 20px;
+  margin: 10px;
+  font-size: 24px;
+  line-height: 24px;
+  border-radius: 10px;
+  position: relative;
+  box-sizing: border-box;
+  cursor: pointer;
+  transition: all 400ms ease;
+  background-color: #34aedf;
+  width: 98%;
+}
+
+.efeito:before {
+  content: '';
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 0px;
+  height: 64px;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 10px;
+  transition: all 2s ease;
+}
+
+.efeito:hover:before {
+  width: 100%;
 
 }
 
@@ -480,4 +520,15 @@ input{
 }
 .social i{
   margin-right: 4px;
+}
+
+
+.ladoEsquerdo {
+  width: 49%;
+  height: 122%;
+}
+
+.ladodireito {
+  width: 49%;
+  margin-left: 2%;
 }
