--- a/Site/public/dash-estatica/nav.css
+++ b/Site/public/dash-estatica/nav.css
@@ -410,13 +410,61 @@ main.cards1 section.card1.about {
 
 
 .retangulo2{
-    background: white;
-    width: 72.5vw;
+    background: #222D5A;
+    width: 70%;
     height: 40vh;
     margin: 1rem;
     border-radius: 10px;
+    display: flex;
+
+    
+}
+.divMinisInfos{
+    /* background-color: #62fd3b; */
+    display: flex;
+    flex-wrap: wrap;
+    width: 40%;
+    height: 100%;
 }
 
+.miniInfo{
+    margin: auto;
+    width:45%;
+    height: 45%;
+    background-color: #3a0f57;
+    border-radius: 10%;
+}
+
+.miniInfo h4 {
+    align-items: center;
+    justify-content: center;
+    color: white;
+    margin: auto;
+    margin: 2%;
+    font-size: larger;
+    
+}
+.vlrMinInf{
+    color: white;
+    margin: auto;
+    font-size: xx-large;
+    margin-left: 80%;
+    z-index: 50;
+}
+.linhaSeparaMeio{
+    background-color: #000000;
+    width: 0.5%;
+    height: 80%;
+    padding-top: 30%;
+    border-radius: 20%;
+}
+
+.LadoListarProcessos{
+    /* background-color: #ee0000; */
+    width: 60%;
+    height: 100%;
+    
+}
 
 .corpoDebaixo{
 
